# invest-bot

./: .gitignore  LICENSE  README.md  data_download.py  get_figi_info.py  pyproject.toml  settings.py
app/: data_preparing.py
data/: popular_stocks  popular_stocks_figi_name.npy
data/stocks/: Газпром_BBG004730RP0_2000_2022.csv  НОВАТЭК_BBG00475KKY8_2000_2022.csv  Норильский никель_BBG004731489_2000_2022.csv  Роснефть_BBG004731354_2000_2022.csv  Сбер Банк - привилегированные акции_BBG0047315Y7_2000_2022.csv  Сбер Банк_BBG004730N88_2000_2022.csv  Сургутнефтегаз - привилегированные акции_BBG004S681M2_2000_2022.csv
